# bemp

./: CMakeLists.txt  bemp.cpp  bootstrap.sh
include/: bemp.hpp
include/bemp/: overload.hpp
